...
export default function AppTabs() {
  return (
    <Tabs>
      <TabSlot style={{ height: '100%' }} />
      <TabList asChild>
        <View style={styles.bar}>
          <TabTrigger name="index" href="/" asChild><TabButton>Home</TabButton></TabTrigger>
          <TabTrigger name="progress" href="/progress" asChild><TabButton>Progress</TabButton></TabTrigger>
          <TabTrigger name="games" href="/games" asChild><TabButton>Games</TabButton></TabTrigger>
          <TabTrigger name="settings" href="/settings" asChild><TabButton>Settings</TabButton></TabTrigger>
        </View>
      </TabList>
    </Tabs>
...
